Changes, almost all of them correct Next point to correct, two-hand weapon uses

--- a/src/pages/modal-add-new-item/modal-add-new-item.html
+++ b/src/pages/modal-add-new-item/modal-add-new-item.html
@@ -71,7 +71,7 @@
             </ion-item>
             <ion-item id="modal-add-new-item-resistence" *ngIf="form.getRawValue().type=='shield'||form.getRawValue().type=='head'||form.getRawValue().type=='torax'||form.getRawValue().type=='arms'||form.getRawValue().type=='hands'||form.getRawValue().type=='legs'||form.getRawValue().type=='feet'">
                 <ion-label floating>
-                    Resistance
+                    Resistence
                 </ion-label>
                 <ion-input formControlName="resistence" type="string"></ion-input>
             </ion-item>
