--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -30,10 +30,10 @@
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" on-click="sellItem(weapon)">
-          Sell 1
+          Sell
         </button>
         <button ion-button color="danger" on-click="destroyItem(weapon)">
-          Destroy 1
+          Destroy
         </button>
       </ion-item-options>
     </ion-item-sliding>
@@ -52,10 +52,10 @@
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" on-click="sellItem(shield)">
-          Sell 1
+          Sell
         </button>
         <button ion-button color="danger" on-click="destroyItem(shield)">
-          Destroy 1
+          Destroy
         </button>
       </ion-item-options>
     </ion-item-sliding>
@@ -74,10 +74,10 @@
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" on-click="sellItem(armor)">
-          Sell 1
+          Sell
         </button>
         <button ion-button color="danger" on-click="destroyItem(armor)">
-          Destroy 1
+          Destroy
         </button>
       </ion-item-options>
     </ion-item-sliding>
@@ -96,10 +96,10 @@
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" on-click="sellItem(consumable)">
-          Sell 1
+          Sell
         </button>
         <button ion-button color="danger" on-click="destroyItem(consumable)">
-          Destroy 1
+          Destroy
         </button>
       </ion-item-options>
     </ion-item-sliding>
@@ -118,10 +118,10 @@
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" on-click="sellItem(other)">
-          Sell 1
+          Sell
         </button>
         <button ion-button color="danger" on-click="destroyItem(other)">
-          Destroy 1
+          Destroy
         </button>
       </ion-item-options>
     </ion-item-sliding>
