--- a/src/pages/equipments/equipments.html
+++ b/src/pages/equipments/equipments.html
@@ -1,18 +1,31 @@
 <ion-header>
   <ion-navbar>
-    <ion-buttons start>
-      <button ion-button icon-only>
-        <ion-icon name="body"></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-title>
-      Equipments
-    </ion-title>
-    <ion-buttons end>
-      <button ion-button>
-        {{char.name}}
-      </button>
-    </ion-buttons>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-3>
+          <ion-title>
+            Equipments
+          </ion-title>
+        </ion-col>
+        <ion-col col-6>
+          <ion-buttons style="text-align:center">
+            <button ion-button icon-only>
+              <ion-icon name="home"></ion-icon>
+            </button>
+          </ion-buttons>
+        </ion-col>
+        <ion-col col-3 style="text-align:right">
+          <ion-buttons ion-button icon-only>
+            <button ion-button icon-only>
+              <ion-icon name="body"></ion-icon>
+            </button>
+            <button ion-button>
+              {{char.name}}
+            </button>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="equipments">
