Last changes, I hope

--- a/src/pages/equipments/equipments.html
+++ b/src/pages/equipments/equipments.html
@@ -2,19 +2,19 @@
   <ion-navbar>
     <ion-grid>
       <ion-row>
-        <ion-col col-3>
+        <ion-col col-5>
           <ion-title>
-            Equipments
+            Tests
           </ion-title>
         </ion-col>
-        <ion-col col-6>
+        <ion-col col-2>
           <ion-buttons style="text-align:center">
-            <button ion-button icon-only>
+            <button ion-button icon-only on-click="goHome()">
               <ion-icon name="home"></ion-icon>
             </button>
           </ion-buttons>
         </ion-col>
-        <ion-col col-3 style="text-align:right">
+        <ion-col col-5 style="text-align:right">
           <ion-buttons ion-button icon-only>
             <button ion-button icon-only>
               <ion-icon name="body"></ion-icon>
