--- a/src/pages/extras/extras.html
+++ b/src/pages/extras/extras.html
@@ -7,19 +7,32 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-buttons start>
-      <button ion-button icon-only>
-        <ion-icon name="bookmark"></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-title>
-      Extras
-    </ion-title>
-    <ion-buttons end>
-      <button ion-button>
-        {{char.name}}
-      </button>
-    </ion-buttons>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-5>
+          <ion-title>
+            Tests
+          </ion-title>
+        </ion-col>
+        <ion-col col-2>
+          <ion-buttons style="text-align:center">
+            <button ion-button icon-only on-click="goHome()">
+              <ion-icon name="home"></ion-icon>
+            </button>
+          </ion-buttons>
+        </ion-col>
+        <ion-col col-5 style="text-align:right">
+          <ion-buttons ion-button icon-only>
+            <button ion-button icon-only>
+              <ion-icon name="bookmark"></ion-icon>
+            </button>
+            <button ion-button>
+              {{char.name}}
+            </button>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="extras">
@@ -65,9 +78,9 @@
     Disadvantages
   </h3>
   <ion-item-sliding *ngFor="let disadvantage of char.disadvantages">
-      <ion-item>
-        <h1 item-start style="width:25%;font-size: 2rem">{{disadvantage.name}}</h1>
-        <ion-note item-content>{{disadvantage.description}}</ion-note>
-      </ion-item>
-    </ion-item-sliding>
+    <ion-item>
+      <h1 item-start style="width:25%;font-size: 2rem">{{disadvantage.name}}</h1>
+      <ion-note item-content>{{disadvantage.description}}</ion-note>
+    </ion-item>
+  </ion-item-sliding>
 </ion-content>
