--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.log('Error', err));
+        .then(() => alert('service worker installed'))
+        .catch(err => alert('Error', err));
     }
   </script>-->
 
