Fixed names of pages

--- a/src/pages/extras/extras.html
+++ b/src/pages/extras/extras.html
@@ -11,7 +11,7 @@
       <ion-row>
         <ion-col col-5>
           <ion-title>
-            Tests
+            Extras
           </ion-title>
         </ion-col>
         <ion-col col-2>
