--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -4,7 +4,7 @@
       <ion-row>
         <ion-col col-5>
           <ion-title>
-            Tests
+            Inventory
           </ion-title>
         </ion-col>
         <ion-col col-2>
