--- a/src/pages/skills/skills.html
+++ b/src/pages/skills/skills.html
@@ -16,7 +16,7 @@
       <ion-row>
         <ion-col col-5>
           <ion-title>
-            Tests
+            Skills
           </ion-title>
         </ion-col>
         <ion-col col-2>
