--- a/src/pages/equipments/equipments.html
+++ b/src/pages/equipments/equipments.html
@@ -4,7 +4,7 @@
       <ion-row>
         <ion-col col-5>
           <ion-title>
-            Tests
+            Equipments
           </ion-title>
         </ion-col>
         <ion-col col-2>
