--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -4,7 +4,7 @@
       <ion-row>
         <ion-col col-5>
           <ion-title>
-            Tests
+            Status
           </ion-title>
         </ion-col>
         <ion-col col-2>
