Fixed missing information

--- a/src/pages/modal-add-resource/modal-add-resource.html
+++ b/src/pages/modal-add-resource/modal-add-resource.html
@@ -53,7 +53,7 @@
                 <ion-label>
                     Value
                 </ion-label>
-                <ion-input formControlName="value" type="text"></ion-input>
+                <ion-input formControlName="value" type="number"></ion-input>
             </ion-item>
             <button ion-button item-end on-click="returnData()">Confirm</button>
         </ion-list>
